--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-cron==0.6.0
 django-environ==0.4.5
 django-timezone-field==6.0
 django-json-widget==1.1.1
-django-mptt==0.14.0
+# django-mptt==0.14.0
 ipython==8.8.0
 kombu[redis]
 uWSGI==2.0.21
